@@ -1,3 +1,9 @@
+2006-11-17  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/ide_disk.c (ide_read_sector, ide_write_sector): Length
+	is counted in sectors now, not bytes (due to change in io/disk
+	API).
+
 2006-09-21  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* src/ide_disk.h: DISK_FUNS is now implicitly static.
@@ -36,7 +42,7 @@
 // -------------------------------------------
 // This file is part of eCos, the Embedded Configurable Operating System.
 // Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004 Red Hat, Inc.
-// Copyright (C) 2004 eCosCentric, Ltd.
+// Copyright (C) 2004, 2006 eCosCentric, Ltd.
 //
 // eCos is free software; you can redistribute it and/or modify it under
 // the terms of the GNU General Public License as published by the Free
